# tap-pokemon-tcg

./: .gitignore  README.md  meltano.yml  pyproject.toml  tap-pokemon-tcg.sh  tox.ini
.github/workflows/: ci_workflow.yml  codeql-analysis.yml
tap_pokemon_tcg/: __init__.py  client.py  streams.py  tap.py
tap_pokemon_tcg/schemas/: cards.json  sets.json
tap_pokemon_tcg/tests/: __init__.py  test_core.py
