[tool.poetry]
name = "tap-pokemon-tcg"
version = "0.0.1"
description = "`tap-pokemon-tcg` is a Singer tap for PokemonTCG, built with the Meltano SDK for Singer Taps."
authors = ["Stephen Bailey"]
keywords = [
    "ELT",
    "PokemonTCG",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.7"
requests = "^2.25.1"
singer-sdk = "^0.3.17"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"
ipykernel = "^6.6.0"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_pokemon_tcg"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-pokemon-tcg = 'tap_pokemon_tcg.tap:TapPokemonTCG.cli'
